octosplay/member/member_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octosplaymember
  namespace: member
  labels:
    octos-play: member
  annotations:
    app-version: aplikasi ini di build dengan image versi satu
spec:
  replicas: 3
  selector:
    matchLabels:
      octosplay-replica: member
  template:
    metadata:
      name: pod-member
      labels:
        octosplay-replica: member
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: octosplaymember
        image: registry.gitlab.com/octosplay/zukino:member1
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /api/ping
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 1
