octosplay/member/octosplay_member_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache2member
  namespace: member
  labels:
    octos-play: apache2member
spec:
  type: LoadBalancer
  selector:
    octosplay-replica: member
  ports:
  - port: 80
    targetPort: 80
