octosplay/member/octosplay_member_deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: member
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octosplaymember
  namespace: member
  labels:
    octos-play: member
  annotations:
    app-version: aplikasi ini di build dengan image versi satu
spec:
  replicas: 3
  selector:
    matchLabels:
      octosplay-replica: member
  template:
    metadata:
      name: pod-member
      labels:
        octosplay-replica: member
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: octosplaymember
        image: registry.gitlab.com/octosplay/zukino:memberlast
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /api/ping
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: apache2member
  namespace: member
  labels:
    octos-play: apache2member
spec:
  type: LoadBalancer
  selector:
    octosplay-replica: member
  ports:
  - port: 80
    targetPort: 80
