octosplay/member/octosplay_member_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octosplay-member-ingress
  namespace: member
spec:
  rules:
    - host: udangbet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache2member
                port:
                  number: 80
  ingressClassName: nginx
