octosplay/member/octosplay_member_ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octosplay-member-ingress
  namespace: member
  annotations:
    cert-manager.io/issuer: octosplay-member-issuer
spec:
  tls:
    - hosts:
      - udangbet.com
      secretName: octosplay-screet
  rules:
    - host: udangbet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache2member
                port:
                  number: 80
  ingressClassName: nginx
